2008-02-29  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemonutils.c:
        (gvfs_file_info_populate_content_types):
	Use g_content_type_get_icon() for the icon mapping.
	Use folder, not folder-remote for icon. I don't
	think we should use folder-remote for things like
	shares, not normal folders.

2008-02-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendcomputer.c: (recompute_files),
	(mount_volume_from_drive), (report_no_media_error),
	(poll_for_media_cb), (try_mount_mountable):
	Implement media polling for Computer backend, handling the case when
	no media is in the drive. Also adds a new string. (#514135)

2008-02-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendnetwork.c (g_vfs_network_daemon_init):

	Added another translator comment.

2008-02-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendftp.c (do_mount):

	Added translator comment.

2008-02-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendftp.c (g_vfs_backend_ftp_pop_connection):

	Reuse existing string to reduce the impact of the string
	freeze breaks.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	actually translate the display name

2008-02-28  A. Walton  <awalton@svn.gnome.org>

	* daemon/gvfsbackendnetwork.c: (g_vfs_network_daemon_init):
	* daemon/gvfsbackendnetwork.h:
	Set the default name for the network backend to prevent 
	possible confusion about "NETWORK Filesystem Service".

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	really check for errors correctly. I need to go to bed.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	check for errors correctly

2008-02-28  Benjamin Otte  <otte@gnome.org>

	reviewed by: A. Walton  <awalton@svn.gnome.org>

	* daemon/daemon-main-generic.c: (main):
	* daemon/daemon-main.c: (daemon_setup):
	* daemon/daemon-main.h: